syntax = "proto3";

package user;

option go_package = "github.com/Haule9-2/microservice/adapter/userclient/generatedclient";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse) {}
  rpc AddUser (AddUserRequest) returns (UserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
  rpc RemoveUser (RemoveUserRequest) returns (UserResponse) {}
}

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string name = 1;
  int32 age = 2;  
}

message AddUserRequest {
  string name = 1;
  int32 age = 2;
}

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  int32 age = 3;
}

message RemoveUserRequest {
  string user_id = 1;
}
